add swagger information about handlers user studied language
